--- a/JustProcessingStage.qmd
+++ b/JustProcessingStage.qmd
@@ -115,12 +115,12 @@ processed_fb_stage23 <- FB_water23 %>%
           DATETIME <= ymd_hms("2023-09-22 00:00:00"))) %>% 
   filter(minutes %in% c(0, 30)) %>% 
   mutate(roll_mean = rollapply(stage_cm ,48,mean,align='center',fill=NA),
-         deployment = 23) 
+         deployment = 23) %>% 
+  drop_na()
 
 
 processed_fb_stage23 %>% 
-  mutate(Q = exp((roll_mean) * log(model_exp$coefficients[2]) +  model_exp$coefficients[1])) %>%
-  ggplot(aes(x = DATETIME, y = Q))+
+  ggplot(aes(x = DATETIME, y = roll_mean))+
   geom_line()+
   theme_classic()
 #output processed salt dilutions
@@ -354,26 +354,24 @@ inner_join(w3_exp) %>%
 ```
 
 
-```{r identify-events}
+```{r FB-identify-events23}
 #identifying events
-fb_all <- processed_fb_stage23 %>% 
-  drop_na()
-bf <- baseflowB(fb_all$roll_mean, alpha = 0.99)
+bf <- baseflowB(processed_fb_stage23$roll_mean, alpha = 0.99)
 
 
 #subtract baseflow from discharge
 #PoT_res = eventPOT(q_23_plotting$Q_mm_day - bf$bf, threshold = 1, min.diff = 1)
 
-PoT_res <- eventPOT(fb_all$roll_mean - bf$bf, threshold = 0.4, min.diff = 20)
+PoT_res <- eventPOT(processed_fb_stage23$roll_mean - bf$bf, threshold = 0.4, min.diff = 20)
 #plot the events
-plotEvents(data = fb_all$roll_mean, 
+plotEvents(data = processed_fb_stage23$roll_mean, 
            events = PoT_res, 
            xlab = "Index", 
            ylab = "Flow (ML/day)", 
            colpnt = "#E41A1C", 
            colline = "#377EB8", main = "eventPOT")
 
-limbs(data = fb_all$roll_mean, 
+limbs(data = processed_fb_stage23$roll_mean, 
                dates =NULL, 
                events = PoT_res, 
                to.plot = TRUE)#now, extract just the start column, then get each window and run through scoring algorithm
@@ -385,10 +383,10 @@ ranges <- data.frame("starts" = PoT_res$srt) %>%
 
 
 # Example: discharge dataframe with datetime and discharge
-discharge_df <- processed_fb_stage
+discharge_df <- processed_fb_stage23
 
 # Copy of your event table
-events <- limbs(data = processed_fb_stage$roll_mean, 
+events <- limbs(data = processed_fb_stage23$roll_mean, 
                dates =NULL, 
                events = PoT_res, 
                to.plot = FALSE)#now, extract just the start column, then get each window and run through scoring algorithm
@@ -427,13 +425,177 @@ for (i in seq_len(nrow(events))) {
 # Optional: label all remaining NA values as "baseflow" (e.g., before first or after last event)
 discharge_df$event_type[is.na(discharge_df$event_type)] <- "baseflow"
 
-stage_df_23 <- discharge_df
+events23 <- discharge_df
+
+events23 %>% 
+  ggplot(aes(x = DATETIME, y = roll_mean, color = event_type))+
+  geom_point()
+
+
+```
+```{r FB-identify-events24}
+#identifying events
+fb_all <- processed_fb_stage24
+
+bf <- baseflowB(processed_fb_stage24$roll_mean, alpha = 0.99)
+
+
+#subtract baseflow from discharge
+#PoT_res = eventPOT(q_23_plotting$Q_mm_day - bf$bf, threshold = 1, min.diff = 1)
+
+PoT_res <- eventPOT(processed_fb_stage24$roll_mean - bf$bf, threshold = 0.4, min.diff = 20)
+#plot the events
+plotEvents(data = processed_fb_stage24$roll_mean, 
+           events = PoT_res, 
+           xlab = "Index", 
+           ylab = "Flow (ML/day)", 
+           colpnt = "#E41A1C", 
+           colline = "#377EB8", main = "eventPOT")
+
+limbs(data = processed_fb_stage24$roll_mean, 
+               dates =NULL, 
+               events = PoT_res, 
+               to.plot = TRUE)#now, extract just the start column, then get each window and run through scoring algorithm
+
+
+ranges <- data.frame("starts" = PoT_res$srt) %>% 
+  mutate("stops" = lead(starts)) %>% 
+  mutate(event_ID = row_number(starts))
+
+
+# Example: discharge dataframe with datetime and discharge
+discharge_df <- processed_fb_stage24
+
+# Copy of your event table
+events <- limbs(data = processed_fb_stage24$roll_mean, 
+               dates =NULL, 
+               events = PoT_res, 
+               to.plot = FALSE)#now, extract just the start column, then get each window and run through scoring algorithm
+
+# Initialize the event_type column
+discharge_df$event_type <- NA_character_
+discharge_df$event_id <- NA_integer_
+
+# Assign "rising" and "falling" from event definitions
+for (i in seq_len(nrow(events))) {
+  ev <- events[i, ]
+  discharge_df$event_id[ev$ris.srt:ev$fal.end] <- i  # Event ID for rising+falling
+  
+  # Rising limb
+  if (!is.na(ev$ris.srt) && !is.na(ev$ris.end) && ev$ris.srt <= ev$ris.end) {
+    discharge_df$event_type[ev$ris.srt:ev$ris.end] <- "rising"
+  }
+  
+  # Falling limb
+  if (!is.na(ev$fal.srt) && !is.na(ev$fal.end) && ev$fal.srt <= ev$fal.end) {
+    discharge_df$event_type[ev$fal.srt:ev$fal.end] <- "falling"
+  }
+  
+  # Baseflow between events
+  if (i < nrow(events)) {
+    this_fal_end <- ev$fal.end
+    next_ris_srt <- events$ris.srt[i + 1]
+    if (this_fal_end + 1 <= next_ris_srt - 1) {
+      baseflow_idx <- (this_fal_end + 1):(next_ris_srt - 1)
+      discharge_df$event_type[baseflow_idx] <- "baseflow"
+      discharge_df$event_id[baseflow_idx] <- NA  # baseflow is not part of any event
+    }
+  }
+}
+
+# Optional: label all remaining NA values as "baseflow" (e.g., before first or after last event)
+discharge_df$event_type[is.na(discharge_df$event_type)] <- "baseflow"
+
+events24 <- discharge_df
 
 discharge_df %>% 
   ggplot(aes(x = DATETIME, y = roll_mean, color = event_type))+
   geom_point()
 
 
+```
+```{r FB-identify-events25}
+#identifying events
+bf <- baseflowB(processed_fb_stage25$roll_mean, alpha = 0.99)
+
+
+#subtract baseflow from discharge
+PoT_res <- eventPOT(processed_fb_stage25$roll_mean - bf$bf, threshold = 1, min.diff = 20)
+#plot the events
+plotEvents(data = processed_fb_stage25$roll_mean, 
+           events = PoT_res, 
+           xlab = "Index", 
+           ylab = "Flow (ML/day)", 
+           colpnt = "#E41A1C", 
+           colline = "#377EB8", main = "eventPOT")
+
+limbs(data = processed_fb_stage25$roll_mean, 
+               dates =NULL, 
+               events = PoT_res, 
+               to.plot = TRUE)#now, extract just the start column, then get each window and run through scoring algorithm
+
+
+ranges <- data.frame("starts" = PoT_res$srt) %>% 
+  mutate("stops" = lead(starts)) %>% 
+  mutate(event_ID = row_number(starts))
+
+
+# Example: discharge dataframe with datetime and discharge
+discharge_df <- processed_fb_stage25
+
+# Copy of your event table
+events <- limbs(data = processed_fb_stage25$roll_mean, 
+               dates =NULL, 
+               events = PoT_res, 
+               to.plot = FALSE)#now, extract just the start column, then get each window and run through scoring algorithm
+
+# Initialize the event_type column
+discharge_df$event_type <- NA_character_
+discharge_df$event_id <- NA_integer_
+
+# Assign "rising" and "falling" from event definitions
+for (i in seq_len(nrow(events))) {
+  ev <- events[i, ]
+  discharge_df$event_id[ev$ris.srt:ev$fal.end] <- i  # Event ID for rising+falling
+  
+  # Rising limb
+  if (!is.na(ev$ris.srt) && !is.na(ev$ris.end) && ev$ris.srt <= ev$ris.end) {
+    discharge_df$event_type[ev$ris.srt:ev$ris.end] <- "rising"
+  }
+  
+  # Falling limb
+  if (!is.na(ev$fal.srt) && !is.na(ev$fal.end) && ev$fal.srt <= ev$fal.end) {
+    discharge_df$event_type[ev$fal.srt:ev$fal.end] <- "falling"
+  }
+  
+  # Baseflow between events
+  if (i < nrow(events)) {
+    this_fal_end <- ev$fal.end
+    next_ris_srt <- events$ris.srt[i + 1]
+    if (this_fal_end + 1 <= next_ris_srt - 1) {
+      baseflow_idx <- (this_fal_end + 1):(next_ris_srt - 1)
+      discharge_df$event_type[baseflow_idx] <- "baseflow"
+      discharge_df$event_id[baseflow_idx] <- NA  # baseflow is not part of any event
+    }
+  }
+}
+
+# Optional: label all remaining NA values as "baseflow" (e.g., before first or after last event)
+discharge_df$event_type[is.na(discharge_df$event_type)] <- "baseflow"
+
+events25 <- discharge_df
+
+events25 %>% 
+  ggplot(aes(x = DATETIME, y = roll_mean, color = event_type))+
+  geom_point()
+
+
+```
+```{r combine-events}
+FBall_events <- rbind(events23, 
+                      mutate(events24, event_id = event_id + 11), 
+                      mutate(events25, event_id = event_id + 16))
+write_csv(FBall_events, "FB_events.csv")
 ```
 
 
@@ -460,7 +622,7 @@ processed_zz_stage23 <- ZZ_water23 %>%
   mutate(stage_cm = ((diff_psi*6894.76) / (997 * 9.8)) * 100 * 0.393701) %>%
   #filter(DATETIME <= ymd_hms("2024-07-21 10:30:00 UTC")) %>% 
    filter(DATETIME > ymd_hms("2023-07-22 00:00:00"),
-         DATETIME < ymd_hms("2023-11-12 00:00:00")) %>% 
+         DATETIME < ymd_hms("2023-10-15 00:00:00")) %>% 
   filter(!(DATETIME >= ymd_hms("2023-09-20 00:00:00") & 
           DATETIME <= ymd_hms("2023-09-22 00:00:00"))) %>% 
   mutate(minutes = minute(DATETIME)) %>% 
@@ -523,20 +685,287 @@ processed_zz_stage25 <- ZZ_water25 %>%
          DATETIME <= ymd_hms("2024-08-10 19:30:00 UTC")) %>%
   mutate(minutes = minute(DATETIME)) %>% 
   filter(minutes %in% c(0, 30)) %>% 
-  mutate(roll_mean = rollapply(stage_cm ,24,mean,align='center',fill=NA)) %>% 
+  mutate(roll_mean = rollapply(stage_cm ,5,mean,align='center',fill=NA)) %>% 
   drop_na()
+
+processed_zz_stage25 %>% 
+  ggplot(aes(x = DATETIME))+
+    geom_point(aes(y = stage_cm))+
+  geom_line(aes(y = roll_mean), color = "grey")+
+  theme_classic()
 
 #### combined ####
 #View(processed_zz_stage)
-rbind(processed_zz_stage23,
+all_zz <- rbind(processed_zz_stage23,
       processed_zz_stage24,
-      processed_zz_stage25) %>%
+      processed_zz_stage25)# %>%
   ggplot()+
     geom_line(aes(x = DATETIME, y = stage_cm))+
     geom_line(aes(x = DATETIME, y = roll_mean), color = "grey")+  theme_classic()+
   labs(title = "ZZ Stage",
        x = "",
        y = "Stage (in)")
+```
+
+```{r ZZ-identify-events23}
+
+input <- all_zz
+#identifying events
+bf = baseflowB(input$roll_mean, alpha = 0.99)
+
+
+#subtract baseflow from discharge
+#PoT_res = eventPOT(q_23_plotting$Q_mm_day - bf$bf, threshold = 1, min.diff = 1)
+
+PoT_res = eventPOT(input$roll_mean - bf$bf, threshold = 0.25, min.diff = 85)
+#plot the events
+plotEvents(data = input$roll_mean, events = PoT_res, xlab = "Index", ylab = "Flow (ML/day)", colpnt = "#E41A1C", colline = "#377EB8", main = "eventPOT")
+
+
+
+limbs(data = input$roll_mean, 
+               dates =NULL, 
+               events = PoT_res, 
+               to.plot = TRUE)#now, extract just the start column, then get each window and run through scoring algorithm
+
+
+ranges <- data.frame("starts" = PoT_res$srt) %>% 
+  mutate("stops" = lead(starts)) %>% 
+  mutate(event_ID = row_number(starts))
+
+
+# Example: discharge dataframe with datetime and discharge
+discharge_df <- input
+
+# Copy of your event table
+events <- limbs(data = input$roll_mean, 
+               dates =NULL, 
+               events = PoT_res, 
+               to.plot = FALSE)#now, extract just the start column, then get each window and run through scoring algorithm
+
+# Initialize the event_type column
+discharge_df$event_type <- NA_character_
+discharge_df$event_id <- NA_integer_
+
+# Assign "rising" and "falling" from event definitions
+for (i in seq_len(nrow(events))) {
+  ev <- events[i, ]
+  discharge_df$event_id[ev$ris.srt:ev$fal.end] <- i  # Event ID for rising+falling
+  
+  # Rising limb
+  if (!is.na(ev$ris.srt) && !is.na(ev$ris.end) && ev$ris.srt <= ev$ris.end) {
+    discharge_df$event_type[ev$ris.srt:ev$ris.end] <- "rising"
+  }
+  
+  # Falling limb
+  if (!is.na(ev$fal.srt) && !is.na(ev$fal.end) && ev$fal.srt <= ev$fal.end) {
+    discharge_df$event_type[ev$fal.srt:ev$fal.end] <- "falling"
+  }
+  
+  # Baseflow between events
+  if (i < nrow(events)) {
+    this_fal_end <- ev$fal.end
+    next_ris_srt <- events$ris.srt[i + 1]
+    if (this_fal_end + 1 <= next_ris_srt - 1) {
+      baseflow_idx <- (this_fal_end + 1):(next_ris_srt - 1)
+      discharge_df$event_type[baseflow_idx] <- "baseflow"
+      discharge_df$event_id[baseflow_idx] <- NA  # baseflow is not part of any event
+    }
+  }
+}
+
+# Optional: label all remaining NA values as "baseflow" (e.g., before first or after last event)
+discharge_df$event_type[is.na(discharge_df$event_type)] <- "baseflow"
+
+stage <- discharge_df
+
+stage %>% 
+  ggplot(aes(x = DATETIME, y = roll_mean, color = event_type))+
+  geom_point()
+
+
+```
+```{r ZZ-identify-events24}
+
+input <- processed_zz_stage24
+#identifying events
+bf = baseflowB(input$roll_mean, alpha = 0.97)
+
+
+#subtract baseflow from discharge
+#PoT_res = eventPOT(q_23_plotting$Q_mm_day - bf$bf, threshold = 1, min.diff = 1)
+
+PoT_res = eventPOT(input$roll_mean - bf$bf, threshold = 0.7, min.diff = 1)
+#plot the events
+plotEvents(data = input$roll_mean, events = PoT_res, xlab = "Index", ylab = "Flow (ML/day)", colpnt = "#E41A1C", colline = "#377EB8", main = "eventPOT")
+
+
+
+limbs(data = input$roll_mean, 
+               dates =NULL, 
+               events = PoT_res, 
+               to.plot = TRUE)#now, extract just the start column, then get each window and run through scoring algorithm
+
+
+ranges <- data.frame("starts" = PoT_res$srt) %>% 
+  mutate("stops" = lead(starts)) %>% 
+  mutate(event_ID = row_number(starts))
+
+
+# Example: discharge dataframe with datetime and discharge
+discharge_df <- input
+
+# Copy of your event table
+events <- limbs(data = input$roll_mean, 
+               dates =NULL, 
+               events = PoT_res, 
+               to.plot = FALSE)#now, extract just the start column, then get each window and run through scoring algorithm
+
+# Initialize the event_type column
+discharge_df$event_type <- NA_character_
+discharge_df$event_id <- NA_integer_
+
+# Assign "rising" and "falling" from event definitions
+for (i in seq_len(nrow(events))) {
+  ev <- events[i, ]
+  discharge_df$event_id[ev$ris.srt:ev$fal.end] <- i  # Event ID for rising+falling
+  
+  # Rising limb
+  if (!is.na(ev$ris.srt) && !is.na(ev$ris.end) && ev$ris.srt <= ev$ris.end) {
+    discharge_df$event_type[ev$ris.srt:ev$ris.end] <- "rising"
+  }
+  
+  # Falling limb
+  if (!is.na(ev$fal.srt) && !is.na(ev$fal.end) && ev$fal.srt <= ev$fal.end) {
+    discharge_df$event_type[ev$fal.srt:ev$fal.end] <- "falling"
+  }
+  
+  # Baseflow between events
+  if (i < nrow(events)) {
+    this_fal_end <- ev$fal.end
+    next_ris_srt <- events$ris.srt[i + 1]
+    if (this_fal_end + 1 <= next_ris_srt - 1) {
+      baseflow_idx <- (this_fal_end + 1):(next_ris_srt - 1)
+      discharge_df$event_type[baseflow_idx] <- "baseflow"
+      discharge_df$event_id[baseflow_idx] <- NA  # baseflow is not part of any event
+    }
+  }
+}
+
+# Optional: label all remaining NA values as "baseflow" (e.g., before first or after last event)
+discharge_df$event_type[is.na(discharge_df$event_type)] <- "baseflow"
+
+stage <- discharge_df
+
+stage %>% 
+  ggplot(aes(x = DATETIME, y = roll_mean, color = event_type))+
+  geom_point()
+
+
+```
+```{r ZZ-identify-events25}
+
+input <- rbind(
+      processed_zz_stage25)
+#identifying events
+bf = baseflowB(input$roll_mean, alpha = 0.97)
+
+
+#subtract baseflow from discharge
+#PoT_res = eventPOT(q_23_plotting$Q_mm_day - bf$bf, threshold = 1, min.diff = 1)
+
+PoT_res = eventPOT(input$roll_mean - bf$bf, threshold = 0.7, min.diff = 1)
+#plot the events
+plotEvents(data = input$roll_mean, events = PoT_res, xlab = "Index", ylab = "Flow (ML/day)", colpnt = "#E41A1C", colline = "#377EB8", main = "eventPOT")
+
+
+
+limbs(data = input$roll_mean, 
+               dates =NULL, 
+               events = PoT_res, 
+               to.plot = TRUE)#now, extract just the start column, then get each window and run through scoring algorithm
+
+
+ranges <- data.frame("starts" = PoT_res$srt) %>% 
+  mutate("stops" = lead(starts)) %>% 
+  mutate(event_ID = row_number(starts))
+
+
+# Example: discharge dataframe with datetime and discharge
+discharge_df <- input
+
+# Copy of your event table
+events <- limbs(data = input$roll_mean, 
+               dates =NULL, 
+               events = PoT_res, 
+               to.plot = FALSE)#now, extract just the start column, then get each window and run through scoring algorithm
+
+# Initialize the event_type column
+discharge_df$event_type <- NA_character_
+discharge_df$event_id <- NA_integer_
+
+# Assign "rising" and "falling" from event definitions
+for (i in seq_len(nrow(events))) {
+  ev <- events[i, ]
+  discharge_df$event_id[ev$ris.srt:ev$fal.end] <- i  # Event ID for rising+falling
+  
+  # Rising limb
+  if (!is.na(ev$ris.srt) && !is.na(ev$ris.end) && ev$ris.srt <= ev$ris.end) {
+    discharge_df$event_type[ev$ris.srt:ev$ris.end] <- "rising"
+  }
+  
+  # Falling limb
+  if (!is.na(ev$fal.srt) && !is.na(ev$fal.end) && ev$fal.srt <= ev$fal.end) {
+    discharge_df$event_type[ev$fal.srt:ev$fal.end] <- "falling"
+  }
+  
+  # Baseflow between events
+  if (i < nrow(events)) {
+    this_fal_end <- ev$fal.end
+    next_ris_srt <- events$ris.srt[i + 1]
+    if (this_fal_end + 1 <= next_ris_srt - 1) {
+      baseflow_idx <- (this_fal_end + 1):(next_ris_srt - 1)
+      discharge_df$event_type[baseflow_idx] <- "baseflow"
+      discharge_df$event_id[baseflow_idx] <- NA  # baseflow is not part of any event
+    }
+  }
+}
+
+# Optional: label all remaining NA values as "baseflow" (e.g., before first or after last event)
+discharge_df$event_type[is.na(discharge_df$event_type)] <- "baseflow"
+
+stage <- discharge_df
+
+stage %>% 
+  ggplot(aes(x = DATETIME, y = roll_mean, color = event_type))+
+  geom_point()
+
+
+```
+
+
+```{r}
+p_load(slider)
+  ZZ_water25 %>% 
+  left_join(ZZ_air25, by = "DATETIME") %>% 
+  mutate(diff_psi = pressure_psi_water - pressure_psi_air) %>% 
+  mutate(stage_cm = ((diff_psi*1000) / (997 * 9.8)) * 100 * 0.393701) %>% 
+  filter(DATETIME >= ymd_hms(max(processed_zz_stage24$DATETIME)),
+         DATETIME <= ymd_hms("2024-08-10 19:30:00 UTC")) %>%
+  mutate(minutes = minute(DATETIME)) %>% 
+  filter(minutes %in% c(0, 30)) %>% 
+  mutate(
+    roll_mean = slide_dbl(stage_cm, mean, .before = 1, .after = 1, .complete = TRUE),
+    # local peak: greater than neighbors
+    is_peak = stage_cm > lag(roll_mean) & stage_cm > lead(roll_mean),
+    # keep peak, otherwise smoothed
+    smoothed_preserve_peaks = if_else(is_peak, stage_cm, roll_mean)
+  ) %>% 
+  drop_na() %>% 
+  ggplot(aes(x = DATETIME))+
+    geom_point(aes(y = stage_cm))+
+  geom_line(aes(y = roll_mean), color = "grey")+
+  theme_classic()
 ```
 
 ```{r fit-stage-discharge}
