--- a/ComparingSequences.qmd
+++ b/ComparingSequences.qmd
@@ -5098,7 +5098,7 @@ rbind(all_pk,
       ) %>% 
   filter(timescale == "30mins")
 
-four_colors <- c("#bb4430", "#7ebdc2", "#231f20", "#f3dfa2")
+four_colors <- c("#bb4430", "#231f20","#7ebdc2",  "#f3dfa2")
 
 fixed_combined %>% 
   ungroup() %>% 
@@ -5126,7 +5126,7 @@ geom_density(aes(color = method, fill = method), alpha = 0.5)+
 
 ## Figure 5: Chains
 Plot that will show multiple chains beside each other, and highlight where they are different
-```{r chains-plot}
+```{r W3-chains-plot}
 # Use pk as the basis for color scheme
 # renumber so that 1 is the most persistent
 renum_w3_pk <- W3_pk_seq %>% 
@@ -5138,7 +5138,8 @@ color_key <- renum_w3_pk %>%
   select(ID, sequence) %>% 
   dplyr::rename(color_ID = sequence)
   
-renum_w3_pk <- renum_w3_pk %>% left_join(color_key, by = "ID")
+renum_w3_pk <- renum_w3_pk %>% left_join(color_key, by = "ID") %>% 
+  mutate(color_ID = abs(color_ID-26)+1)
 
 renum_w3_twi <- w3_twi_sequence %>% 
   mutate(method = "Topographic Wetness Index", x = 3) %>% 
@@ -5146,16 +5147,16 @@ renum_w3_twi <- w3_twi_sequence %>%
   mutate(sequence = seq(1, 26, 1)) %>% 
   left_join(color_key, by = "ID")
 
-renum_w3_bfs <- best_bfs_seqW3 %>% 
+renum_w3_bfs <- best_bfs_w3 %>% 
   mutate(method = "BFS", x = 2) %>% 
   left_join(color_key, by = "ID")
 
-renum_w3_event <- best_event_seq %>% 
+renum_w3_event <- avg_event_w3 %>% 
   mutate(method = "Event based sequence", x = 4) %>% 
   left_join(color_key, by = "ID")
 
 #Make dataframe to contain the locations of points
-rbind(
+w3_chains <- rbind(
       renum_w3_pk,
       renum_w3_bfs,
       renum_w3_event,
@@ -5177,7 +5178,129 @@ rbind(
   scale_x_discrete(labels = function(method) str_wrap(method, width = 10))+
   scale_y_continuous(
     breaks = c(5, 24),  # Positions for the labels
-    labels = c("Last", "First") # Custom labels
+    labels = c("Wets first,\ndries last", "Wets last,\ndries first") # Custom labels
+  ) +
+  scale_color_viridis_c(guide = "none")+
+  theme_classic()+
+  labs(y = "Sequence", x = "")+
+  theme(axis.ticks.y = element_blank(), # Removes y-axis tick marks
+    axis.line.y = element_blank(),
+    axis.text.y = element_text(angle = 90, hjust = 1, vjust = 0.5))    # Removes y-axis line)
+```
+```{r FB-chains-plot}
+# Use pk as the basis for color scheme
+# renumber so that 1 is the most persistent
+renum_fb_pk <- FB_pk_seq %>% 
+  mutate(method = "Proportion of Time Flowing", x = 1) %>% 
+  filter(ID %in% FB_IDs) %>% 
+  mutate(sequence = seq(24, 1, -1))
+# define column for color
+color_keyFB <- renum_fb_pk %>% 
+  select(ID, sequence) %>% 
+  dplyr::rename(color_ID = sequence)
+  
+renum_fb_pk <- renum_fb_pk %>% left_join(color_keyFB, by = "ID") %>% 
+  mutate(color_ID = abs(color_ID-24)+1)
+
+renum_fb_twi <- fb_twi_sequence %>% 
+  mutate(method = "Topographic Wetness Index", x = 3) %>% 
+  filter(ID %in% FB_IDs) %>% 
+  mutate(sequence = seq(1, 24, 1)) %>% 
+  left_join(color_keyFB, by = "ID")
+
+renum_fb_bfs <- best_bfs_fb %>% 
+  mutate(method = "BFS", x = 2) %>% 
+  left_join(color_keyFB, by = "ID")
+
+renum_fb_event <- avg_event_fb %>% 
+  mutate(method = "Event based sequence", x = 4) %>% 
+  left_join(color_keyFB, by = "ID")
+
+#Make dataframe to contain the locations of points
+fb_chains <- rbind(
+      renum_fb_pk,
+      renum_fb_bfs,
+      renum_fb_event,
+      renum_fb_twi
+      ) %>% 
+  mutate(#method = str_wrap(method, 10),
+         method = fct_relevel(method, c("Proportion of Time Flowing",
+                                
+                                "Topographic Wetness Index",
+                                "BFS",
+                                "Event based sequence"
+                                ))
+         ) %>% 
+  mutate(text_ID = abs(color_ID-24)+1) %>% 
+  ggplot()+
+  geom_point(aes(x = method, y = sequence, color = color_ID), size = 5)+
+  geom_text(aes(x = method, y = sequence, 
+                label = text_ID), color = "white", size = 2)+
+  scale_x_discrete(labels = function(method) str_wrap(method, width = 10))+
+  scale_y_continuous(
+    breaks = c(5, 24),  # Positions for the labels
+    labels = c("Wets first,\ndries last", "Wets last,\ndries first") # Custom labels
+  ) +
+  scale_color_viridis_c(guide = "none")+
+  theme_classic()+
+  labs(y = "Sequence", x = "")+
+  theme(axis.ticks.y = element_blank(), # Removes y-axis tick marks
+    axis.line.y = element_blank(),
+    axis.text.y = element_text(angle = 90, hjust = 1, vjust = 0.5))    # Removes y-axis line)
+```
+```{r ZZ-chains-plot}
+# Use pk as the basis for color scheme
+# renumber so that 1 is the most persistent
+renum_zz_pk <- ZZ_pk_seq %>% 
+  mutate(method = "Proportion of Time Flowing", x = 1) %>% 
+  filter(ID %in% ZZ_IDs) %>% 
+  mutate(sequence = seq(24, 1, -1))
+# define column for color
+color_keyZZ <- renum_zz_pk %>% 
+  select(ID, sequence) %>% 
+  dplyr::rename(color_ID = sequence)
+  
+renum_zz_pk <- renum_zz_pk %>% left_join(color_keyZZ, by = "ID") %>% 
+  mutate(color_ID = abs(color_ID-24)+1)
+
+renum_zz_twi <- zz_twi_sequence %>% 
+  mutate(method = "Topographic Wetness Index", x = 3) %>% 
+  filter(ID %in% ZZ_IDs) %>% 
+  mutate(sequence = seq(1, 24, 1)) %>% 
+  left_join(color_keyZZ, by = "ID")
+
+renum_zz_bfs <- best_bfs_zz %>% 
+  mutate(method = "BFS", x = 2) %>% 
+  left_join(color_keyZZ, by = "ID")
+
+renum_zz_event <- avg_event_zz %>% 
+  mutate(method = "Event based sequence", x = 4) %>% 
+  left_join(color_keyZZ, by = "ID")
+
+#Make dataframe to contain the locations of points
+zz_chains <- rbind(
+      renum_zz_pk,
+      renum_zz_bfs,
+      renum_zz_event,
+      renum_zz_twi
+      ) %>% 
+  mutate(#method = str_wrap(method, 10),
+         method = fct_relevel(method, c("Proportion of Time Flowing",
+                                
+                                "Topographic Wetness Index",
+                                "BFS",
+                                "Event based sequence"
+                                ))
+         ) %>% 
+  mutate(text_ID = abs(color_ID-24)+1) %>% 
+  ggplot()+
+  geom_point(aes(x = method, y = sequence, color = color_ID), size = 5)+
+  geom_text(aes(x = method, y = sequence, 
+                label = text_ID), color = "white", size = 2)+
+  scale_x_discrete(labels = function(method) str_wrap(method, width = 10))+
+  scale_y_continuous(
+    breaks = c(5, 24),  # Positions for the labels
+    labels = c("Wets first,\ndries last", "Wets last,\ndries first") # Custom labels
   ) +
   scale_color_viridis_c(guide = "none")+
   theme_classic()+
@@ -5187,6 +5310,68 @@ rbind(
     axis.text.y = element_text(angle = 90, hjust = 1, vjust = 0.5))    # Removes y-axis line)
 ```
 
+Add maps of each watershed, where points are labeled colored to match these? Maybe just numbered?
+```{r maps}
+#### W3 ####
+# based on figure 1 map
+w3_stic_locs_renum <- w3_stic_locs_r %>% 
+  left_join(renum_w3_pk) %>% 
+  filter(ID %in% W3_IDs)
+
+w3_numb_map <- ggplot()+
+  theme_void()+
+  geom_sf(data = w3_outline, fill = NA, color = "#FFD166", alpha = 0.3, lwd = 2)+
+  geom_sf(data = w3_net, colour = "#9AC0CD", lwd = 1) +
+  geom_sf(data = w3_stic_locs_renum, aes(fill = abs(color_ID-26)+1), size = 4, pch = 21) +
+  geom_sf_text(data = w3_stic_locs_renum, aes(label = color_ID), size = 2, color = "white")+
+  scale_fill_viridis_c()+
+  theme(legend.position = "none")
+
+#### FB ####
+fb_stic_locs_renum <- lcc_fb %>% 
+  left_join(renum_fb_pk) %>% 
+  filter(ID %in% FB_IDs)
+
+fb_numb_map <- ggplot()+
+  theme_void()+
+  geom_sf(data = fb_outline, fill = NA, color = "#397367", alpha = 0.3, lwd = 2) +
+  geom_sf(data = fb_net, colour = "darkslategray3", lwd = 2) +
+  geom_sf(data = fb_stic_locs_renum, aes(fill = abs(color_ID-24)+1), size = 4, pch = 21) +
+  geom_sf_text(data = fb_stic_locs_renum, aes(label = color_ID), size = 2, color = "white")+
+  scale_fill_viridis_c()+
+  theme(rect = element_rect(fill = "transparent", color = NA))+
+  theme(legend.position = "none")
+
+##### ZZ ####
+zz_stic_locs_renum <- lcc %>% 
+  left_join(renum_zz_pk) %>% 
+  filter(ID %in% ZZ_IDs)
+
+zz_numb_map <- ggplot()+
+  theme_void()+
+  geom_sf(data = zz_outline, fill = NA, color = "#7E6B8F", alpha = 0.3, lwd = 2) +
+  geom_sf(data = zz_net, colour = "darkslategray3", lwd = 1) +
+  geom_sf(data = zz_stic_locs_renum, aes(fill = abs(color_ID-24)+1), size = 4, pch = 21) +
+  geom_sf_text(data = zz_stic_locs_renum, aes(label = color_ID), size = 2, color = "white")+
+  scale_fill_viridis_c() +
+  theme(legend.position = "none")
+  # scale_fill_continuous(high = "#27408B", low = "white",
+  #                       labels = c("0", "0.5", "1"),
+  #                       breaks = c(0, 0.5, 1),
+  #                       limits = c(0, 1))+
+  # theme(rect = element_rect(fill = "transparent", color = NA),
+  #       legend.position = "right")+
+  #   labs(fill = str_wrap("Proportion of time flowing", width = 10))+
+  # ggspatial::annotation_scale(location = 'tr', pad_x = unit(0.2, "cm"), 
+  #                             pad_y = unit(1, "cm"))
+zz_numb_map
+```
+
+```{r combine-chains}
+(w3_chains ) / (fb_chains ) / (zz_chains ) 
+
+(w3_numb_map / fb_numb_map / zz_numb_map) + plot_layout(heights = 1)
+```
 
 ## Figure 7: Hydrograph, colored by which sequence works the best
 NEED TO FIX COLORS
